# TightCCD

./: CMakeLists.txt  LICENSE  README.md
src/: bsc_tightbound.cpp  bsc_tightbound.h
